# noesis-engine

./: .gitignore  NOESIS_WHITEPAPER.md  README.md  build.gradle.kts  settings.gradle.kts
buildSrc/: build.gradle.kts
gradle/: libs.versions.toml
noesis/inference/: CHANGELOG.md  FEATURE_COMPARISON.md  Package.swift  setup.sh
noesis/inference/Scripts/: build-flatbuffers.sh  copy-dylibs.sh  setup-rust-libs.sh
rust-harmony-jni/: Cargo.toml
rust-harmony-jni/src/: lib.rs
schemas/: harmony_protocol.fbs  noesis_inference.fbs
swift-implementation/: .gitignore  Package.resolved  Package.swift  README.md  noesis.config.template.json  test_inference.sh
swift-implementation/Plugins/MetallibBuilder/: MetallibBuilder.swift
swift-implementation/Plugins/ModelExportBuilder/: ModelExportBuilder.swift
swift-implementation/Plugins/RustDependencyBuilder/: RustDependencyBuilder.swift
swift-implementation/Scripts/: run-chat.sh  setup-rust-libs.sh  test-noesis.sh
swift-implementation/Sources/CHarmony/: harmony_ffi.h  harmony_ffi.pc
swift-implementation/Sources/CTiktoken/: libtiktoken.dylib  module.modulemap  tiktoken_ffi.h
swift-implementation/Sources/NoesisBridge/: ChatSession.swift  SupportingClasses.swift
swift-implementation/Sources/NoesisChat/: ChatCLI.swift
swift-implementation/Sources/NoesisEngine/: CReferenceSampler.swift  GenerationPipeline.swift  GptossFileFormat.swift  InferenceBenchmark.swift  KernelDispatchers.swift  MetalDebugger.swift  ModelLoader.swift  ModelStructures.swift  NoesisEngine.swift  Sampling.swift
(+52 files in other folders)
